--- a/composer.json
+++ b/composer.json
@@ -1,39 +1,53 @@
 {
-    "name": "mpociot/versionable",
-    "license": "MIT",
-    "description": "Allows to create Laravel 4 / 5 Model versioning and restoring",
-    "keywords": ["model", "laravel", "ardent", "version", "history", "restore"],
-    "homepage": "http://github.com/mpociot/versionable",
-    "authors": [
-        {
-            "name": "Marcel Pociot",
-            "email": "m.pociot@gmail.com"
-        }
-    ],
-    "support": {
-        "issues": "https://github.com/mpociot/versionable/issues",
-        "source": "https://github.com/mpociot/versionable"
-    },
-    "require": {
-        "php": ">=5.3.0",
-        "illuminate/support": "~4.0|~5.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "4.7.*",
-        "mockery/mockery": "dev-master",
-        "illuminate/database": "~5.0",
-        "illuminate/events": "~5.0"
-    },
-    "autoload": {
-        "classmap": [
-            "src/migrations",
-            "tests/VersionableTestCase.php"
-        ],
-        "psr-0": {
-            "Mpociot\\Versionable": "src/"
-        }
-    },
-    "scripts": {
-        "test": "phpunit"
+  "name": "mpociot/versionable",
+  "license": "MIT",
+  "description": "Allows to create Laravel 4 / 5 Model versioning and restoring",
+  "keywords": [
+    "model",
+    "laravel",
+    "ardent",
+    "version",
+    "history",
+    "restore"
+  ],
+  "homepage": "http://github.com/mpociot/versionable",
+  "authors": [
+    {
+      "name": "Marcel Pociot",
+      "email": "m.pociot@gmail.com"
     }
+  ],
+  "support": {
+    "issues": "https://github.com/mpociot/versionable/issues",
+    "source": "https://github.com/mpociot/versionable"
+  },
+  "require": {
+    "php": ">=5.3.0",
+    "illuminate/support": "~4.0|~5.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "4.7.*",
+    "mockery/mockery": "dev-master",
+    "illuminate/database": "~5.0",
+    "illuminate/events": "~5.0"
+  },
+  "autoload": {
+    "classmap": [
+      "src/migrations",
+      "tests/VersionableTestCase.php"
+    ],
+    "psr-0": {
+      "Mpociot\\Versionable": "src/"
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Mpociot\\Versionable\\VersionableServiceProvider"
+      ]
+    }
+  },
+  "scripts": {
+    "test": "phpunit"
+  }
 }
