--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,10 @@
     {
       "name": "Marcel Pociot",
       "email": "m.pociot@gmail.com"
+    },
+    {
+      "name": "Marko Krüger",
+      "email": "mk@marko-krueger.de"
     }
   ],
   "support": {
@@ -22,8 +26,8 @@
     "source": "https://github.com/mpociot/versionable"
   },
   "require": {
-    "php": ">=5.3.0",
-    "illuminate/support": "~4.0|~5.0"
+    "php": ">=7.0",
+    "illuminate/support": "~5.6"
   },
   "require-dev": {
     "phpunit/phpunit": "4.7.*",
