--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
   },
   "require": {
     "php": ">=7.0",
-    "illuminate/support": "~5.6"
+    "illuminate/support": "~5.6",
+    "doctrine/dbal": "2.6.3"
   },
   "require-dev": {
     "phpunit/phpunit": "4.7.*",
